manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "ashkube-d053"
    labels:
        app: "ashkube-d053"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: ashkube9da3-ashkube-d053.f2b4abd6d03242e1b5fe.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "ashkube-d053"
                servicePort: 8080
